[tool.poetry]
name = "dailypost"
version = "0.1.0"
description = "Automatically search for news and then publish blogs"
authors = ["Shy2593666979 <2593666979@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.12.3"
celery = "5.4.0"
google-search-results = "2.4.2"
loguru = "0.7.3"
openai = "1.60.2"
pydantic = "2.10.6"
requests = "2.32.3"
selenium = "4.28.1"
webdriver-manager = "4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
